Added some properties and some renderings tot the new page.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductDetail/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductDetail/Rendering.cshtml
@@ -4,7 +4,7 @@
 	Layout = null;
 }
 
-<section class="tabbable">
+<section class="tabbable margin-top">
 	<ul class="nav nav-tabs" role="tablist">
 		<li class="nav-item">
 			<a href="#product-description" class="nav-link active" data-toggle="tab" role="tab">Details</a>
