--- a/src/AvenueClothing.Project.Transaction/Views/QuantityPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/QuantityPicker/Rendering.cshtml
@@ -2,10 +2,13 @@
 @{
     Layout = null;
 }
-
-<select class="js-quantity-picker" data-product-sku="@Model.ProductSku">
-    @for (int number = 1; number <= Model.MaxNumberOfItems; number++)
-    {
-        <option value="@number">@(number)</option>
-    }
-</select>
+<div>@Model.QuantityLabel</div>
+<div class="dropdown">
+        <select class="js-quantity-picker" data-product-sku="@Model.ProductSku">
+            <option class="dropdown-menu" value="">-- Please Select --</option>
+             @for (int number = 1; number <= Model.MaxNumberOfItems; number++)
+            {
+                <option value="@number">@(number)</option>
+            }
+        </select>
+    </div>
