Implemented feedback on updating the basket, and adding a review now happens asynchronously without redirecting to webservice link.

--- a/src/AvenueClothing.B2C/Views/Layout.cshtml
+++ b/src/AvenueClothing.B2C/Views/Layout.cshtml
@@ -56,7 +56,7 @@
             var jsConfig =
             {
                 $rootSelector: function (){return $(document)}(),
-                $triggerEventSelector: function () { return $("*") }()
+                $triggerEventSelector: $({}) 
             };
 
             /** END OF PUBLIC API **/
