Buttons now equal size

--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -112,7 +112,7 @@
 	@Html.CheckBoxFor(x => x.IsShippingAddressDifferent, new { @class = "js-address-checkbox display-inline" })
 
     <div class="display-block">
-        <input type="submit" class="btn btn-secondary btn-lg pull-right" value="Continue to shipping options" />
+        <input type="submit" class="btn btn-secondary pull-right" value="Continue to shipping options" />
     </div>
 
     <div class="display-block">
