--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -104,7 +104,7 @@ else
 
     <div class="control-group margin-top">
         <div class="controls">
-            <a href="/address"><button type="submit" class="btn btn-primary" name="review-product">Continue</button></a>
+            <a href="/address"><button type="submit" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
         </div>
     </div>
 }
