--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -130,6 +130,6 @@
 			</tbody>
 		</table>
 	</div>
-	<button name="send-order" class="pull-xs-right btn btn-secondary btn-lg btn-success" type="submit">Complete Order <i class="icon-arrow-right icon-white"></i></button>
+	<button name="send-order" class="pull-xs-right btn btn-secondary btn-success" type="submit">Complete Order <i class="icon-arrow-right icon-white"></i></button>
     <a href="/payment" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
 }
