--- a/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
@@ -28,7 +28,7 @@
 
 		<div class="control-group margin-top">
 		    <div class="controls">
-		        <button type="submit" class="btn btn-primary" name="review-product">Continue to order preview</button>
+		        <button type="submit" class="btn btn-primary pull-right" name="review-product">Continue to order preview</button>
                 <a href="/shipping" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
 
 		    </div>
