--- a/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
@@ -28,7 +28,7 @@
 
 		<div class="control-group margin-top">
 		    <div class="controls">
-		        <button type="submit" class="btn btn-primary" name="review-product">Continue to payment options</button>
+		        <button type="submit" class="btn btn-primary pull-right" name="review-product">Continue to payment options</button>
 		    </div>
             <div class="controls">
                 <a href="/address" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
