buttons now work accordng to bootstrap. Not all are blue.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
@@ -29,7 +29,7 @@
 	</aside>
 
 	<p class="btn-group view-details">
-		<a href="@Model.Url" class="btn btn-default">
+		<a href="@Model.Url" class="btn btn-primary btn-uCommerce">
 			View more <span>
 				<i class="fa fa-shopping-cart icon-white" aria-hidden="true"></i>
 			</span>
