--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -10,9 +10,7 @@
 }
 else
 {
-    //using(Html.BeginForm("UpdateBasket", "Basket", FormMethod.Post))
-    //{
-        <table class="table table-striped"  id="cart">
+        <table class="table table-striped" id="cart">
             <thead>
                 <tr>
                     <th class="span7">Description</th>
@@ -37,42 +35,42 @@ else
                         <td class="money">
                             @if (@line.Discount.HasValue && @line.Discount > 0)
                         {
-                            <span style="text-decoration: line-through" data-price>
+                                <span style="text-decoration: line-through" data-price>
                                     @line.Price
-                            </span>
-                            <span data-price-with-discount>
-                                @line.PriceWithDiscount
-                            </span>
+                                </span>
+                                <span data-price-with-discount>
+                                    @line.PriceWithDiscount
+                                </span>
                             }
                             else
                             {
                                 <span data-price>
                                     @line.Price
                                 </span>
-                                
+
                             }
                         </td>
                         <td class="money" data-tax>
                             @line.Tax
                         </td>
                         <td>
-                            @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity})
+                            @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity })
                         </td>
                         <td data-total>
                             @line.Total
                         </td>
                         <td>
-                            <button type="submit" value="@line.OrderLineId" name="RemoveOrderlineId" class="line-remove">×</button>
+                            <button type="button" data-line-id="@line.OrderLineId" name="RemoveOrderlineId" class="line-remove">×</button>
                         </td>
                     </tr>
                 }
                 <tr>
                     <td rowspan="4"></td>
                     <td colspan="2" rowspan="4">
-                       <button name="update-basket" id="update-basket" class="btn btn-secondary update-basket js-update-basket" data-refresh-url="@Model.RefreshUrl" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit"><i class="icon-refresh icon-white"></i>Update</button>
+                        <button name="update-basket" id="update-basket" class="btn btn-secondary update-basket js-update-basket" data-refresh-url="@Model.RefreshUrl" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit"><i class="icon-refresh icon-white"></i>Update</button>
                     </td>
                     <td>Sub total:</td>
-                    <td class="money order-subtotal" >
+                    <td class="money order-subtotal">
                         @Model.SubTotal
                     </td>
                     <td>&nbsp;</td>
@@ -100,11 +98,11 @@ else
                 </tr>
             </tbody>
         </table>
-    //}
+   
 
     <div class="control-group margin-top">
         <div class="controls">
-            <a href="/address"><button type="submit" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
+            <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
         </div>
     </div>
 }
