--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -7,9 +7,9 @@
 	var showShippingAddress = Model.IsShippingAddressDifferent ? "display:block;" : "display:none;";
 }
 
-@using (Html.BeginForm("Save", "Address", FormMethod.Post))
+@using (Html.BeginForm("Save", "Address", FormMethod.Post, new { @class="js-address"}))
 {
-	<div class="col-md-12 no-horizontal-padding js-address">
+	<div class="col-md-12 no-horizontal-padding">
 		<div class="col-md-6 well no-left-margin js-address-billing">
 			<legend>Billing address</legend>
 			<div class="col-md-6 control-group form-group">
@@ -64,7 +64,7 @@
 			<div class="col-md-6 control-group form-group">
 
 				<label>First name</label>
-				@Html.TextBoxFor(x => x.ShippingAddress.FirstName, new { @class = "col-md-12 form-control required margin-bottom" })
+				@Html.TextBoxFor(x => x.ShippingAddress.FirstName, new { @class = "col-md-12 form-control required margin-bottom", required="true"})
 
 				<label>E-mail</label>
 				@Html.TextBoxFor(x => x.ShippingAddress.EmailAddress, new { @class = "col-md-12 form-control required email margin-bottom" })
