Review form fixing- emptying the form wip

--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
@@ -10,22 +10,21 @@
 <div class="control-group">
     <label class="control-label" for="review-rating">Rating</label>
     <div class="controls">
-        <label><input type="radio" name="Rating" value="1" /><i class="fa fa-star"></i></label>
-        <label><input type="radio" name="Rating" value="2"/><i class="fa fa-star"></i></label>
-        <label><input type="radio" name="Rating" value="3"/><i class="fa fa-star"></i></label>
-        <label><input type="radio" name="Rating" value="4"/><i class="fa fa-star"></i></label>
-        <label><input type="radio" name="Rating" value="5"/><i class="fa fa-star"></i></label>
+        <label><input  type="radio" name="Rating" value="1" /><i class="fa fa-star"></i></label>
+        <label><input  type="radio" name="Rating" value="2"/><i class="fa fa-star"></i></label>
+        <label><input  type="radio" name="Rating" value="3"/><i class="fa fa-star"></i></label>
+        <label><input  type="radio" name="Rating" value="4"/><i class="fa fa-star"></i></label>
+        <label><input  type="radio" name="Rating" value="5"/><i class="fa fa-star"></i></label>
     </div>
 </div>
 
-    <div id="review-form" class="">
+    <div id="review-form" class="review-form">
         <div class="control-group margin-top">
             <br/>
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-name">
                 Your Name
                 <div class="controls">
-                    <input type="text" id="review-name" name="Name" placeholder=""
-                           class="required span12 form-control" />
+                    <input type="text" id="review-name" name="Name" class="required span12 form-control" required="true"/>
                 </div>
             </tag>
         </div>
