--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewList/Rendering.cshtml
@@ -31,7 +31,7 @@
     }
     else
     {
-        <p>No-one has reviewed this product yet.</p>
+        <p class="no-reviews">No-one has reviewed this product yet.</p>
     }
 </div>
 
