stylling fixes for responsiveness

--- a/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
@@ -1,6 +1,6 @@
-﻿<div class="col-sm-6">
+﻿<div class="col-lg-6">
     @Html.Sitecore().Placeholder("left")
 </div>
-<div class="col-sm-6">
+<div class="col-lg-6">
     @Html.Sitecore().Placeholder("right")
 </div>
