--- a/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
@@ -24,17 +24,18 @@
 					<span>@paymentMethod.Text</span>
 				}
 			</label>
-		}
+        }
 
-		<div class="control-group margin-top">
-		    <div class="controls">
-		        <button type="submit" class="btn btn-primary pull-right" name="review-product">Continue to order preview</button>
-                <a href="/shipping" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
+        <div class="row">
+            <div class="col-md-6 control-group form-group ">
+                <a href="/shipping" type="submit" class="btn btn-secondary btn-default">Back</a>
 
-		    </div>
-          
-		</div>
-		<input type="hidden" name="PaymentMethodId" value="@Model.SelectedPaymentMethodId">
+
+            </div>
+            <div class="col-md-6 control-group form-group ">
+                <button type="submit" class="btn btn-primary" name="review-product">Continue to order preview</button>
+            </div>
+        </div>
 	}
 	else
 	{
