--- a/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
@@ -24,20 +24,20 @@
 					@shippingMethod.Text
 				}
 			</label>
-		}
+        }
+        <div class="row">
+            <div class="col-md-6 control-group form-group ">
+                <a href="/address" type="submit" class="btn btn-secondary btn-default ">Back</a>
 
-		<div class="control-group margin-top">
-		    <div class="controls">
-		        <button type="submit" class="btn btn-primary pull-right" name="review-product">Continue to payment options</button>
-		    </div>
-            <div class="controls">
-                <a href="/address" type="submit" class="btn btn-secondary btn-default pull-left">Back</a>
+
             </div>
-		</div>
-		<input type="hidden" name="PaymentMethodId" value="@Model.SelectedShippingMethodId">
-	}
-	else
-	{
+            <div class="col-md-6 control-group form-group ">
+                <button type="submit" class="btn btn-primary" name="review-product">Continue to payment options</button>
+            </div>
+        </div>
+    }
+    else
+    {
 		<p class="alert">
 			WARNING: No shipping methods have been configured for @Model.ShippingCountry within <a href="http://ucommerce.dk">UCommerce</a> administration area.
 		</p>
