Fixed YSOD on search, added user feedback for when there's no results

--- a/src/AvenueClothing.Project.Catalog/Views/Search/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/Search/Rendering.cshtml
@@ -1,11 +1,20 @@
 ﻿@model AvenueClothing.Project.Catalog.ViewModels.CategoryRenderingViewModel
 @using Sitecore.Mvc
 
-<div class="row">
-    <div class="product-list col-sm-12 col-md-12">
-        @foreach (var productItem in Model.ProductItemGuids)
-        {
-            @Html.Sitecore().Rendering(Model.ProductCardRendering, new { productItem });
-        }
+<div class="category">
+    <div class="row">
+        <div class="product-list col-sm-12 col-md-12">
+            @if (Model.ProductItemGuids.Count > 0)
+            {
+                foreach (var productGuid in Model.ProductItemGuids)
+                {
+                    @Html.Sitecore().Rendering(Model.ProductCardRendering, new { productGuid });
+                }
+            }
+            else
+            {
+                <p>The search returned no results.</p>
+            }
+        </div>
     </div>
 </div>
