--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -2,14 +2,14 @@
 @using System.Web.Mvc.Html
 @model AvenueClothing.Project.Transaction.ViewModels.BasketRenderingViewModel
 
-@if (Model.OrderLines.Count == 0)
-{
-    <div class="alert alert-info">
-        <p>Your cart is empty. Please <a href="/">return to our store and add some items</a>.</p>
-    </div>
-}
-else
-{
+    @if (Model.OrderLines.Count == 0)
+    {
+        <div class="alert alert-info">
+            <p>Your cart is empty. Please <a href="/">return to our store and add some items</a>.</p>
+        </div>
+    }
+    else
+    {
         <table class="table table-striped" id="cart">
             <thead>
                 <tr>
@@ -34,7 +34,7 @@ else
                         <td><a href="@line.ProductUrl">@line.ProductName</a></td>
                         <td class="money">
                             @if (@line.Discount.HasValue && @line.Discount > 0)
-                        {
+                            {
                                 <span style="text-decoration: line-through" data-price>
                                     @line.Price
                                 </span>
@@ -56,7 +56,7 @@ else
                         <td>
                             @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity })
                         </td>
-                        <td data-total>
+                        <td class="item-total">
                             @line.Total
                         </td>
                         <td>
@@ -67,7 +67,7 @@ else
                 <tr>
                     <td rowspan="4"></td>
                     <td colspan="2" rowspan="4">
-                        <button name="update-basket" id="update-basket" class="btn btn-secondary update-basket js-update-basket" data-refresh-url="@Model.RefreshUrl" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit"><i class="icon-refresh icon-white"></i>Update</button>
+                        <button name="update-basket" id="update-basket" class="btn btn-secondary update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit"><i class="icon-refresh icon-white"></i>Update</button>
                     </td>
                     <td>Sub total:</td>
                     <td class="money order-subtotal">
@@ -98,11 +98,11 @@ else
                 </tr>
             </tbody>
         </table>
-   
 
-    <div class="control-group margin-top">
-        <div class="controls">
-            <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
+
+        <div class="control-group margin-top">
+            <div class="controls">
+                <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
+            </div>
         </div>
-    </div>
-}
+    }
