JQuery validate module and review form validation

--- a/src/AvenueClothing.Project.Website/Css/uCommerce.bootstrap.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.bootstrap.css
@@ -1606,6 +1606,10 @@ select:focus:required:invalid:focus {
 .help-inline {
   color: #595959;
 }
+span.help-inline {
+    font-size: small;
+    color: #d9534f;
+}
 .help-block {
   display: block;
   margin-bottom: 10px;
