--- a/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/MiniBasket/Rendering.cshtml
@@ -22,7 +22,7 @@
 				<li>
 					<div>
 						<a href="/cart">
-							<span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s) in basket, total: <span class="js-mini-basket-total">@Model.Total</span>
+							<span class="js-mini-basket-number-of-items">@Model.NumberOfItems</span> item(s): <span class="js-mini-basket-total">@Model.Total</span>
 						</a>
 					</div>
 				</li>
