--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -4,10 +4,10 @@
 @{
 	Layout = null;
 }
-<div class="col-sm-12 col-lg-12">
+<div class="container">
     @using (Html.BeginForm("RequestPayment", "BasketPreview", FormMethod.Post))
     {
-        <div class="well col-md-12">
+        <div class="well overflow-hidden">
             <div class="col-md-6">
                 <h3>Billing address</h3>
                 <br />
@@ -48,8 +48,7 @@
                 </address>
             </div>
         </div>
-      
-            <table class="table table-striped">
+      <table class="table table-striped">
                 <thead>
                 <tr>
                     <th>Item no. </th>
