sidebar and cart fixed.

--- a/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
@@ -17,7 +17,7 @@
     <p>Avenue Clothing is an example store to demonstrate the simple -yet powerful e-commerce functionality uCommerce brings to Umbraco.</p>
     <p>All products listed are from existing retailers but no orders will be fulfilled.</p>
     <p>
-        <a href="http://ucommerce.dk" class="btn btn-default" title="The most feature rich e-commerce package for Umbraco">Find Out More</a>
+        <a href="http://ucommerce.dk" class="btn btn-secondary" title="The most feature rich e-commerce package for Umbraco">More...</a>
     </p>
 </div>
 
