--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -723,7 +723,7 @@ input.error-input, textarea.error-input{
   border-color: #d9534f;
 }
 
-div#why-buy.well.sidebar-nav > ol > li > img {
+div#why-buy.well.sidebar-nav > ol > li > img, p#powered-by-ucommerce > a >img {
     width: 100%;
 }
 .overflow-hidden {
