--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -7,7 +7,7 @@
     var showShippingAddress = Model.IsShippingAddressDifferent ? "display:block;" : "display:none;";
 }
 
-@using (Html.BeginForm("Save", "Address", FormMethod.Post, new {@class = "js-address"}))
+@using (Html.BeginForm("Save", "Address", FormMethod.Post, new {@class = "js-address", data_submit_address= ".submit-address", data_save_address_url= @Model.SaveAddressUrl }))
 {
     <div class="col-md-12 no-horizontal-padding">
         <div class="col-lg-6 col-md-6 well no-left-margin js-address-billing">
@@ -16,9 +16,10 @@
 
                 <label>First name</label>
                 @Html.TextBoxFor(x => x.BillingAddress.FirstName, new {@class = "col-md-12 form-control required margin-bottom"})
-
+                <label class="error-custom BillingAddressFirstName"></label>
                 <label>E-mail</label>
                 @Html.TextBoxFor(x => x.BillingAddress.EmailAddress, new {@class = "col-md-12 form-control required email margin-bottom"})
+                <label class="error-custom BillingAddressEmailAddress"></label>
 
                 <label>Attention</label>
                 @Html.TextBoxFor(x => x.BillingAddress.Attention, new {@class = "col-md-12 form-control margin-bottom"})
@@ -28,6 +29,7 @@
 
                 <label>Postal code</label>
                 @Html.TextBoxFor(x => x.BillingAddress.PostalCode, new {@class = "col-md-12 form-control required margin-bottom"})
+                <label class="error-custom BillingAddressPostalCode"></label>
 
                 <label>Phone</label>
                 @Html.TextBoxFor(x => x.BillingAddress.PhoneNumber, new {@class = "col-md-12 form-control margin-bottom"})
@@ -38,12 +40,14 @@
 
                 <label>Last name</label>
                 @Html.TextBoxFor(x => x.BillingAddress.LastName, new {@class = "col-md-12 form-control required margin-bottom"})
+                <label class="error-custom BillingAddressLastName"></label>
 
                 <label>Company</label>
                 @Html.TextBoxFor(x => x.BillingAddress.CompanyName, new {@class = "col-md-12 form-control margin-bottom"})
 
                 <label>Street</label>
                 @Html.TextBoxFor(x => x.BillingAddress.Line1, new {@class = "col-md-12 form-control required margin-bottom"})
+                <label class="error-custom BillingAddressLine1"></label>
 
                 <label>City</label>
                 @Html.TextBoxFor(x => x.BillingAddress.City, new {@class = "col-md-12 form-control margin-bottom"})
@@ -117,6 +121,6 @@
         <a href="/cart" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
     </div>
     <div class="col-md-6 no-padding-col">
-        <input type="submit" class="btn btn-primary btn-full-width pull-right" value="Continue to shipping options"/>
+        <input type="submit" class="btn btn-primary btn-full-width pull-right submit-address" value="Continue to shipping options"/>
     </div>
 }
