--- a/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/VariantPicker/Rendering.cshtml
@@ -7,11 +7,12 @@
 {
     <div class="margin-top">@variant.DisplayName</div>
     <div class="dropdown">
-        <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl">
+        <select class="js-variant-picker" data-variant-name="@variant.Name" data-product-sku="@Model.ProductSku" data-variant-exists-url="@Model.VariantExistsUrl" data-get-available-combinations-url="@Model.GetAvailableCombinationsUrl">
+
             <option class="dropdown-menu" value="">-- Please Select --</option>
             @foreach (var variantItem in variant.VaraintItems)
             {
-                <option class="dropdown-item" value="@variantItem.Name">@variantItem.DisplayName</option>
+                <option class="dropdown-item" data-variant-name="@variant.Name" value="@variantItem.Name">@variantItem.DisplayName</option>
             }
 
         </select>
