Updated to use the right removed as the old one was deleted.

--- a/src/AvenueClothing.Project.Transaction/Views/CommerceConnectBasket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/CommerceConnectBasket/Rendering.cshtml
@@ -1,7 +1,6 @@
 ﻿@using System.Web.Mvc
 @using System.Web.Mvc.Html
-@model AvenueClothing.Project.Transaction.ViewModels.PurchaseOrderViewModel
-
+@model AvenueClothing.Project.Transaction.ViewModels.BasketRenderingViewModel
 @if (Model.OrderLines.Count == 0)
 {
 	<div class="alert alert-info">
