Sitecore 8.0 would not work without using statements for Sitecore.Mvc.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="col-lg-6">
+﻿@using Sitecore.Mvc
+
+<div class="col-lg-6">
     @Html.Sitecore().Placeholder("left")
 </div>
 <div class="col-lg-6">
