--- a/src/AvenueClothing.Project.Transaction/Views/Voucher/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Voucher/Rendering.cshtml
@@ -3,7 +3,7 @@
 	Layout = null;
 }
 
-<div class="input-group js-voucher" data-input-class-selector="@Model.InputClassSelector" data-button-class-selector="@Model.ButtonClassSelector">
+<div class="input-group js-voucher margin-top margin-bottom" data-input-class-selector="@Model.InputClassSelector" data-button-class-selector="@Model.ButtonClassSelector">
 	<input id="@Model.InputClassSelector" type="text" name="voucher" class="form-control " placeholder="Enter code here" />
 	<span class="input-group-btn">
 		<button id="@Model.ButtonClassSelector" name="add-voucher" class="btn btn-secondary btn-nopadding" data-voucher-url="@Model.VoucherUrl" data-input-class-selector="@Model.InputClassSelector"><i class="icon-plus icon-white"></i>Add Voucher</button>
