Added same margin to carousel as breadcrumb so products on front page had proper spacing away from the carousel.

--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -732,3 +732,7 @@ div#why-buy.well.sidebar-nav > ol > li > img, p#powered-by-ucommerce > a >img {
 table.table.table-striped {
      table-layout: fixed;
 }
+
+.carousel {
+    margin-bottom: 1rem;
+}
