Make header align with content and product card match in height.

--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -736,3 +736,12 @@ table.table.table-striped {
 .carousel {
     margin-bottom: 1rem;
 }
+
+.navbar-fixed-top .row {
+    padding: 0px 45px 0 45px;
+}
+
+.product-list .item-name {
+    height: 40px;
+    overflow: hidden;
+}
