--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -745,3 +745,8 @@ table.table.table-striped {
     height: 40px;
     overflow: hidden;
 }
+footer {
+    border-top: solid #dfdfdf 1px;
+    padding-top: 10px;
+    margin: 0px 30px 0 30px;
+}
